using System;
using UnityEditor.Callbacks;
using UnityEngine;
using UnityEngine.InputSystem;

internal class AnimationString
{
    internal static string isRunning = "isRunning";
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string yVel = "yVel";
    internal static string jump = "jump";
}

